Updating with tested examples

--- a/mission-editor/example-modpack-missions/A Mission/missions/A Mission/Mission 1.ini
+++ b/mission-editor/example-modpack-missions/A Mission/missions/A Mission/Mission 1.ini
@@ -4,10 +4,10 @@ DisableEnemyAIPlayer=True
 [Language_en]
 Name=Mission 1
 Description=Shoot the enemy!
-MissionBriefingAssetsDirectory=missions\Mission 1
+MissionBriefingAssetsDirectory=missions\A Mission
 MissionBriefingAssetsSearchPattern=*.png,*.jpg,*.bmp
-MissionBriefingLeftPane=missions\Mission 1\LeftPane_en.xml
-MissionBriefingRightPane=missions\Mission 1\RightPane_en.xml
+MissionBriefingLeftPane=missions\A Mission\LeftPane_en.xml
+MissionBriefingRightPane=missions\A Mission\RightPane_en.xml
 [Language_cn]
 Name=Mission 1
 [Language_ru]
